init mChangedList bug 251247, r=dwitte, sr=darin